@@ -1,3 +1,9 @@
+2007-09-22  Frank Ch. Eigler  <fche@elastic.org>
+
+	PR 5057.
+	* systemtap.maps/linear_nearlyempty.*: New test for
+	histogram printing elision.
+
 2007-09-21  Martin Hunt  <hunt@redhat.com>
 
 	* systemtap.maps/linear*: Updated linear histogram tests.
