@@ -1,3 +1,10 @@
+2007-09-22  Frank Ch. Eigler  <fche@elastic.org>
+
+	PR 5057.
+	* stat-common.c (_stp_stat_print_histogram): Elide consecutive
+	zero rows beyond 2*STAT_ELISION+1.
+	(STAT_ELISION): New parameter, default 2.
+
 2007-09-21  Martin Hunt  <hunt@redhat.com>
 	PR 5024
 	* stat-common.c (_stp_stat_print_histogram): Change
